--- a/index.html
+++ b/index.html
@@ -5,8 +5,122 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" width="138" height="70" alt="Логотип турагентства «Седона»">
+        </a>
+        <ul class="siti-navigation">
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    <main class="container">
+      <h1 class="visually-hidden">Турагентство «Седона»</h1>
+      <div class="image-slogan">
+        <img src="#" width="1200" height="508" alt="Фотография гор седоны и слоган">
+        <p class="slogan"><b>Седона — небольшой городок в аризоне, Заслуживающий большего!</b></p>
+      </div>
+      <section class="features">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        <ul class="features-list">
+          <li class="features-item">
+            <span>№1</span>
+            <h3>Настоящий Городок</h3>
+            <img class="city-image" src="#" width="800" height="256" alt="Фотография города Седона">
+            <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
+            <ul class="features-list-more">
+              <li class="features-item">
+                <h4>Жилье</h4>
+                <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="features-item">
+                <h4>Еда</h4>
+                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="features-item">
+                <h4>Сувениры</h4>
+                <p>Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
+          </li>
 
+          <li class="features-item">
+            <span>№2</span>
+            <h3>Там есть мост дьявола</h3>
+            <img class="devil's-bridge-image" src="#" width="800" height="256" alt="Фотография моста дьявола">
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </li>
+
+          <li class="features-item">
+            <span>№3</span>
+            <h3>Небольшая Площадь</h3>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+
+          <li class="features-item">
+            <span>№4</span>
+            <h3>Красивая Дорога</h3>
+            <p>Ехать в Седону из Лас-вегаса совсем не скучно!</p>
+          </li>
+
+          <li class="features-item">
+            <span>№5</span>
+            <h3>Мало туристов</h3>
+            <p>Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="reservation">
+        <h2 class="visually-hidden">Бронирование гостиницы</h2>
+        <b>Заинтересовались?</b>
+        <p class="excerpt">Укажите предполагаемые даты поездки, И мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button search-button" href="hotels.html">Поиск гостиницы в седоне</a>
+      </section>
+      <section class="main-map">
+        <h2 class="visually-hidden">Как до нас добраться</h2>
+        <img src="#" width="1200" height="593" alt="Координаты города Седона">
+      </section>
+
+    </main>
+      <footer class="main-footer">
+        <span class="footer-hashtag">#visitsedona</span>
+        <div class="footer-social">
+          <ul>
+            <li>
+              <a class="button social-button social-twitter" href="#">
+                <span class="visually-hidden">Твиттер</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-facebook" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button youtube" href="#">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <p class="footer-copyright">
+          <span>Website by</span>
+          <a href="https://htmlacademy.ru">
+            <img src="#" width="115" height="41" alt="Логотип HTML Academy">
+          </a>
+        </p>
+      </footer>
+
+      <section class="activ modal modal-form">
+        <h2 class="visually-hidden">Форма поиска гостиниц</h2>
+        <!-- Тут будет форма поиска гостиницы -->
+      </section>
   </body>
 </html>
