Добавил заглушки и изменил название внутренней страницы.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="138" height="70" alt="Логотип турагентства «Седона»">
+          <img src="img/138x70.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
         <ul class="siti-navigation">
           <li><a href="#">Информация</a></li>
@@ -22,7 +22,7 @@
     <main class="container">
       <h1 class="visually-hidden">Турагентство «Седона»</h1>
       <div class="image-slogan">
-        <img src="#" width="1200" height="508" alt="Фотография гор седоны и слоган">
+        <img src="img/1200x508.png" width="1200" height="508" alt="Фотография гор седоны и слоган">
         <p class="slogan"><b>Седона — небольшой городок в аризоне, Заслуживающий большего!</b></p>
       </div>
       <section class="features">
@@ -32,7 +32,7 @@
           <li class="features-item">
             <span>№1</span>
             <h3>Настоящий Городок</h3>
-            <img class="city-image" src="#" width="800" height="256" alt="Фотография города Седона">
+            <img class="city-image" src="img/800x256.png" width="800" height="256" alt="Фотография города Седона">
             <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
             <ul class="features-list-more">
               <li class="features-item">
@@ -53,7 +53,7 @@
           <li class="features-item">
             <span>№2</span>
             <h3>Там есть мост дьявола</h3>
-            <img class="devil's-bridge-image" src="#" width="800" height="256" alt="Фотография моста дьявола">
+            <img class="devil's-bridge-image" src="img/800x256.png" width="800" height="256" alt="Фотография моста дьявола">
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
           </li>
 
@@ -85,7 +85,7 @@
       </section>
       <section class="main-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <img src="#" width="1200" height="593" alt="Координаты города Седона">
+        <img src="img/1200x593.png" width="1200" height="593" alt="Координаты города Седона">
       </section>
 
     </main>
@@ -113,7 +113,7 @@
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru">
-            <img src="#" width="115" height="41" alt="Логотип HTML Academy">
+            <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
           </a>
         </p>
       </footer>
