--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="138" height="70" alt="Логотип турагентства «Седона»">
+          <img src="img/138x70.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
         <ul class="siti-navigation">
           <li><a href="#">Информация</a></li>
@@ -52,7 +52,7 @@
           <ul class="found-hotels-list">
             <li class="found-hotels-item">
               <h3>Amara Resort & Spa</h3>
-              <img src="#" width="135" height="90" alt="Amara Resort & Spa">
+              <img src="img/135x90.png" width="135" height="90" alt="Amara Resort & Spa">
               <p class="desc">
                 <span>Гостиница</span>
                 <span>От 4000 р.</span>
@@ -66,7 +66,7 @@
 
             <li class="found-hotels-item">
               <h3>Desert Quail Inn</h3>
-              <img src="#" width="135" height="90" alt="Desert Quail Inn">
+              <img src="img/135x90.png" width="135" height="90" alt="Desert Quail Inn">
               <p class="desc">
                 <span>Мотель</span>
                 <span>От 3000 р.</span>
@@ -80,7 +80,7 @@
 
             <li class="found-hotels-item">
               <h3>Villas at Poco Diablo</h3>
-              <img src="#" width="135" height="90" alt="Villas at Poco Diablo">
+              <img src="img/135x90.png" width="135" height="90" alt="Villas at Poco Diablo">
               <p class="desc">
                 <span>Апартаменты</span>
                 <span>От 2000 р.</span>
@@ -119,7 +119,7 @@
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru">
-            <img src="#" width="115" height="41" alt="Логотип HTML Academy">
+            <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
           </a>
         </p>
       </footer>
