Добавил на внутренней странице, адрес ссылке на логотипе.

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img src="img/138x70.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
         <ul class="siti-navigation">
