Убрал лишний div обертку из footer (С главной и из внутренней страниц)

--- a/index.html
+++ b/index.html
@@ -91,25 +91,23 @@
     </main>
       <footer class="main-footer">
         <span class="footer-hashtag">#visitsedona</span>
-        <div class="footer-social">
-          <ul>
-            <li>
-              <a class="button social-button social-twitter" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-facebook" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button youtube" href="#">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="footer-social">
+          <li>
+            <a class="button social-button social-twitter" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-facebook" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-youtube" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru">
