--- a/catalog.html
+++ b/catalog.html
@@ -97,25 +97,23 @@
 
       <footer class="main-footer">
         <p class="footer-hashtag">#visitsedona</p>
-        <div class="footer-social">
-          <ul>
-            <li>
-              <a class="button social-button social-twitter" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-facebook" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-youtube" href="#">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="footer-social">
+          <li>
+            <a class="button social-button social-twitter" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-facebook" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-youtube" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru">
