--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
         <a class="main-header-logo" href="index.html">
           <img src="img/138x70.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
-        <ul class="siti-navigation">
+        <ul class="site-navigation">
           <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
@@ -20,6 +20,7 @@
         </ul>
       </nav>
     </header>
+
       <main class="container">
         <h1 class="visually-hidden">Поиск жилья в Седоне</h1>
 
@@ -32,94 +33,159 @@
           <h2>Найдено: 3</h2>
           <div class="sorting">
             <h3>Сортировка:</h3>
-            <ul class="sorting-list">
-              <li><a href="#">По цене</a></li>
-              <li><a href="#">По типу</a></li>
-              <li><a href="#">По рейтингу</a></li>
-              <li>
-                <a class="up-sorting" href="#">
-                  <span class="visually-hidden">От большего к меньшему</span>
-                </a>
-              </li>
-              <li>
-                <a class="down-sorting" href="#">
-                  <span class="visually-hidden">От меньшего к большему</span>
-                </a>
-              </li>
-            </ul>
+            <form action="#" method="get">
+              <fieldset class="sorting-type">
+              <legend class="visually-hidden">Сортировка: по типам</legend>
+              <p>
+                  <label for="sorting-price">
+                    <a>По цене</a>
+                  </label>
+                  <input class="visually-hidden" type="radio" name="sorting-type" value="price" id="sorting-price" checked>
+              </p>
+
+              <p>
+                  <label for="sorting-type">
+                    <a>По типу</a>
+                  </label>
+                  <input class="visually-hidden" type="radio" name="sorting-type" value="type" id="sorting-type">
+              </p>
+
+              <p>
+                  <label for="sorting-rating">
+                    <a>По рейтингу</a>
+                  </label>
+                  <input class="visually-hidden" type="radio" name="sorting-type" value="rating" id="sorting-rating">
+              </p>
+              </fieldset>
+
+              <fieldset class="sorting-descending-increase">
+                <legend class="visually-hidden">
+                  Сортировка: по увеличению, уменьшению
+                </legend>
+                <p>
+                  <label class="visually-hidden" for="sorting-increase">
+                    <a>По увеличению</a>
+                  </label>
+                  <input type="radio" name="sorting-descending-increase" value="increase" id="sorting-increase">
+                </p>
+
+                <p>
+                  <label class="visually-hidden" for="sorting-descending">
+                    По уменьшению
+                  </label>
+                  <input type="radio" name="sorting-descending-increase"
+                  value="descending" id="sorting-descending" checked>
+                </p>
+              </fieldset>
+            </form>
           </div>
 
           <ul class="found-hotels-list">
             <li class="found-hotels-item">
-              <h3>Amara Resort & Spa</h3>
-              <img src="img/135x90.png" width="135" height="90" alt="Amara Resort & Spa">
-              <p class="desc">
-                <span>Гостиница</span>
-                <span>От 4000 р.</span>
+              <p class="image-hotel">
+                <img src="img/135x90.png" width="135" height="90" alt="Amara Resort & Spa">
               </p>
-              <p>
-                <a class="button details-button" href="#">Подробнее</a>
-                <a class="button reserve-button" href="#">Забронировать</a>
-              </p>
-              <span class="rating">Рейтинг: 8,5</span>
+              <div class="column-info-reserve">
+                <a class="name-hotel" href="#">Amara Resort & Spa</a>
+                <div class="desc">
+                  <p>Гостиница</p>
+                  <p>От 4000 р.</p>
+                </div>
+                <p class="column-reserve">
+                  <a class="button details-button" href="#">Подробнее</a>
+                  <a class="button reserve-button" href="#">Забронировать</a>
+                </p>
+              </div>
+              <p class="rating">Рейтинг: 8,5</p>
             </li>
 
             <li class="found-hotels-item">
-              <h3>Desert Quail Inn</h3>
-              <img src="img/135x90.png" width="135" height="90" alt="Desert Quail Inn">
-              <p class="desc">
-                <span>Мотель</span>
-                <span>От 3000 р.</span>
+              <p class="image-hotel">
+                <img src="img/135x90.png" width="135" height="90" alt="Desert Quail Inn">
               </p>
-              <p>
-                <a class="button details-button" href="#">Подробнее</a>
-                <a class="button reserve-button" href="#">Забронировать</a>
-              </p>
-              <span class="rating">Рейтинг: 8,9</span>
+              <div class="column-info-reserve">
+                <a class="name-hotel" href="#">Desert Quail Inn</a>
+                <div class="desc">
+                  <p>Гостиница</p>
+                  <p>От 4000 р.</p>
+                </div>
+                <p class="column-reserve">
+                  <a class="button details-button" href="#">Подробнее</a>
+                  <a class="button reserve-button" href="#">Забронировать</a>
+                </p>
+              </div>
+              <p class="rating">Рейтинг: 8,9</p>
             </li>
 
             <li class="found-hotels-item">
-              <h3>Villas at Poco Diablo</h3>
-              <img src="img/135x90.png" width="135" height="90" alt="Villas at Poco Diablo">
-              <p class="desc">
-                <span>Апартаменты</span>
-                <span>От 2000 р.</span>
+              <p class="image-hotel">
+                <img src="img/135x90.png" width="135" height="90" alt="Villas at Poco Diablo">
               </p>
-              <p>
-                <a class="button details-button" href="#">Подробнее</a>
-                <a class="button reserve-button" href="#">Забронировать</a>
-              </p>
-              <span class="rating">Рейтинг: 9,2</span>
+              <div class="column-info-reserve">
+                <a class="name-hotel" href="#">Villas at Poco Diablo</a>
+                <div class="desc">
+                  <p>Апартаменты</p>
+                  <p>От 2000 р.</p>
+                </div>
+                <p class="column-reserve">
+                  <a class="button details-button" href="#">Подробнее</a>
+                  <a class="button reserve-button" href="#">Забронировать</a>
+                </p>
+              </div>
+              <p class="rating">Рейтинг: 9,2</p>
             </li>
           </ul>
         </section>
       </main>
 
       <footer class="main-footer">
-        <p class="footer-hashtag">#visitsedona</p>
-        <ul class="footer-social">
-          <li>
-            <a class="button social-button social-twitter" href="#">
-              <span class="visually-hidden">Твиттер</span>
+        <div class="column-left">
+          <p class="footer-hashtag">#visitsedona</p>
+        </div>
+        <div class="column-center">
+          <ul class="footer-social">
+            <li>
+              <a class="button social-button social-twitter" href="#">
+                <span class="visually-hidden">Твиттер</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-facebook" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-youtube" href="#">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="column-right">
+          <ul class="footer-social">
+            <li>
+              <a class="button social-button social-twitter" href="#">
+                <span class="visually-hidden">Твиттер</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-facebook" href="#">
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li>
+              <a class="button social-button social-youtube" href="#">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+          <p class="footer-copyright">
+            <span>Website by</span>
+            <a href="https://htmlacademy.ru/intensive/htmlcss">
+              <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
             </a>
-          </li>
-          <li>
-            <a class="button social-button social-facebook" href="#">
-              <span class="visually-hidden">Фейсбук</span>
-            </a>
-          </li>
-          <li>
-            <a class="button social-button social-youtube" href="#">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-          </li>
-        </ul>
-        <p class="footer-copyright">
-          <span>Website by</span>
-          <a href="https://htmlacademy.ru">
-            <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
-          </a>
-        </p>
+          </p>
+        </div>
       </footer>
     </body>
 </html>
