Обернул картинку в <p> (для сетки)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <main class="container">
       <h1 class="visually-hidden">Турагентство «Седона»</h1>
       <div class="image-slogan">
-        <img src="img/1200x508.png" width="1200" height="508" alt="Фотография гор седоны и слоган">
+        <p class="image">
+          <img src="img/1200x508.png" width="1200" height="508" alt="Фотография гор седоны и слоган">
+        </p>
         <p class="visually-hidden">Welcome to the gorgeous Sedona</p>
         <p class="visually-hidden">«Because the grand canyon sucks!»</p>
         <p class="slogan">Седона — небольшой городок в аризоне, Заслуживающий большего!</p>
@@ -103,8 +105,8 @@
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <img src="img/1200x593.png" width="1200" height="593" alt="Координаты города Седона">
       </section>
-
     </main>
+
     <footer class="main-footer">
         <div class="column-left">
           <p class="footer-hashtag">#visitsedona</p>
