Внес изменения (обернул дополнительно иконки календаря в кнопки на главной странице)

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <label for="arrival-data">Дата заезда:</label>
                 <div class="column-input-icon">
                   <input type="text" name="arrival-data" placeholder="24 Апреля 2017" id="arrival-data">
-                  <img src="img/calendar.svg" width="21" height="20" alt="Иконка календаря">
+                  <button class="button modal-form__button" type="button"><img src="img/calendar.svg" width="21" height="20" alt="Календарь"></button>
                 </div>
               </div>
 
@@ -113,7 +113,8 @@
                 <label for="departure-date">Дата выезда:</label>
                 <div class="column-input-icon">
                   <input type="text" name="departure-date" placeholder="4 июля 2017" id="departure-date">
-                  <img src="img/calendar.svg" width="21" height="20" alt="Иконка календаря">
+                  <button class="button modal-form__button" type="button">
+                  <img src="img/calendar.svg" width="21" height="20" alt="Календарь"></button>
                 </div>
               </div>
             </fieldset>
@@ -148,7 +149,6 @@
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <img src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
     </section>
-
     <footer class="main-footer">
       <div class="column">
         <p class="footer-hashtag">#visitsedona</p>
