--- a/index.html
+++ b/index.html
@@ -113,11 +113,14 @@
 
       <section class="reservation">
         <h2 class="visually-hidden">Бронирование гостиницы</h2>
-        <p class="reservation__lead">Заинтересовались?</p>
-        <p class="reservation__excerpt">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button reservation__button-search" href="hotels.html">Поиск гостиницы в седоне</a>
+        <div class="reservation__column inner">
+          <p class="reservation__lead">Заинтересовались?</p>
+          <p class="reservation__excerpt">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="button reservation__button-search" href="hotels.html">Поиск гостиницы в седоне</a>
+        </div>
+
         <form class="active modal modal-form" action="#" method="post">
-          <fieldset class="visually-hidden">
+          <fieldset>
             <legend class="visually-hidden">
               Форма поиска гостиниц
             </legend>
